--- a/package.json
+++ b/package.json
@@ -15,18 +15,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "next": "14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "ui": "workspace:*"
-  },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18.2.55",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0",
-    "turbo": "^1.12.2",
-    "typescript": "^5.3.3"
+    "pnpm": "^8.15.1",
+    "turbo": "^1.12.2"
   }
 }
