--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "turbo run build",
     "deploy": "turbo run build --scope=app --include-dependencies --no-deps"
   },
+  "packageManager": "pnpm@8.14.1",
   "keywords": [],
   "author": "",
   "license": "ISC",
