--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev": "turbo run dev",
     "build": "turbo run build",
-    "deploy": "turbo run build --scope=app --include-dependencies --no-deps"
+    "deploy": "turbo run build --scope=app --include-dependencies"
   },
   "packageManager": "pnpm@8.14.1",
   "keywords": [],
