--- a/apps/docs/tsconfig.json
+++ b/apps/docs/tsconfig.json
@@ -12,6 +12,9 @@
     "next.config.js",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
+    ".next/types/**/*.ts"
   ],
+  "exclude": [
+    "node_modules"
+  ]
 }
