--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,18 +11,22 @@
   "dependencies": {
     "@repo/ui": "workspace:*",
     "next": "^14.0.4",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.4",
     "@repo/eslint-config": "workspace:*",
+    "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/eslint": "^8.56.1",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
 }
