--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,6 +6,7 @@
     "**/*.css"
   ],
   "exports": {
+    "./styles.css": "./dist/styles.css",
     "./components/*": "./src/components/*.tsx",
     "./shadcn/*": "./src/components/ui/*.tsx",
     "./navigation/*": "./src/components/navigation/*.tsx"
