fix: trying if the styles import works when using src instead of dist

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,7 +6,7 @@
     "**/*.css"
   ],
   "exports": {
-    "./styles.css": "./dist/styles.css",
+    "./styles.css": "./src/styles.css",
     "./components/*": "./src/components/*.tsx",
     "./shadcn/*": "./src/components/ui/*.tsx",
     "./navigation/*": "./src/components/navigation/*.tsx"
