--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "build:css": "postcss src/styles.css -o dist/styles.css"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
+    "@locked/eslint-config": "workspace:*",
+    "@locked/typescript-config": "workspace:*",
     "prettier": "^3.1.1",
     "turbo": "latest"
   },
