--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/ui",
+  "name": "@locked/ui",
   "version": "0.0.0",
   "private": true,
   "sideEffects": [
@@ -31,9 +31,11 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/tailwind-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
+    "@locked/eslint-config": "workspace:*",
+    "@locked/tailwind-config": "workspace:*",
+    "@locked/typescript-config": "workspace:*",
+    
+    "@types/locked": "workspace:*",
     "@turbo/gen": "^1.11.3",
     "@types/eslint": "^8.56.1",
     "@types/node": "^20.10.6",
