--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "autoprefixer": "^10.4.17",
     "class-variance-authority": "^0.7.0",
@@ -34,15 +35,15 @@
     "@locked/eslint-config": "workspace:*",
     "@locked/tailwind-config": "workspace:*",
     "@locked/typescript-config": "workspace:*",
-    
-    "@types/locked": "workspace:*",
     "@turbo/gen": "^1.11.3",
     "@types/eslint": "^8.56.1",
+    "@types/locked": "workspace:*",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "eslint": "^8.56.0",
     "tsup": "^8.0.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "zustand": "^4.5.0"
   }
 }
