--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,15 +16,17 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^14.0.4",
     "@locked/eslint-config": "workspace:*",
     "@locked/tailwind-config": "workspace:*",
     "@locked/typescript-config": "workspace:*",
+    "@types/locked": "workspace:*",
+    
+    "@next/eslint-plugin-next": "^14.0.4",
     "@types/eslint": "^8.56.1",
+    "autoprefixer": "^10.4.17",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
