fix: changed imports due to recent changed and added example env

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,15 +2,7 @@
   "name": "@locked/ui",
   "version": "0.0.0",
   "private": true,
-  "sideEffects": [
-    "**/*.css"
-  ],
-  "exports": {
-    "./styles.css": "./src/styles.css",
-    "./components/*": "./src/components/*.tsx",
-    "./shadcn/*": "./src/components/ui/*.tsx",
-    "./navigation/*": "./src/components/navigation/*.tsx"
-  },
+  "main": "index.ts",
   "scripts": {
     "ui:add": "pnpm dlx shadcn-ui@latest add",
     "build": "tailwindcss -i ./src/styles.css -o ./dist/styles.css",
@@ -20,12 +12,13 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "lucide-react": "^0.323.0",
+
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "autoprefixer": "^10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "lucide-react": "^0.323.0",
     "react": "^18.2.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
@@ -35,6 +28,7 @@
     "@locked/eslint-config": "workspace:*",
     "@locked/tailwind-config": "workspace:*",
     "@locked/typescript-config": "workspace:*",
+    "@locked/assets": "workspace:*",
     "@turbo/gen": "^1.11.3",
     "@types/eslint": "^8.56.1",
     "@types/locked": "workspace:*",
