--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@locked/ui": "workspace:*",
+    "@locked/icons": "workspace:*",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
