--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -7,6 +7,6 @@
       "@ui/*": ["./src/*"]
     },
   },
-  "include": ["src", "*.config.ts"],
+  "include": ["src", "*.config.ts", "index.ts", "src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules", "dist"]
 }
