--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "types": "index.d.ts",
   "dependencies": {
+    "@locked/icons": "workspace:*",
     "typescript": "latest"
   },
   "devDependencies": {
