--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,23 +12,25 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
-    "lucide-react": "^0.323.0",
-
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "autoprefixer": "^10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "lucide-react": "^0.323.0",
     "react": "^18.2.0",
+    "recharts": "^2.11.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@locked/assets": "workspace:*",
     "@locked/eslint-config": "workspace:*",
     "@locked/tailwind-config": "workspace:*",
     "@locked/typescript-config": "workspace:*",
-    "@locked/assets": "workspace:*",
     "@turbo/gen": "^1.11.3",
     "@types/eslint": "^8.56.1",
     "@types/locked": "workspace:*",
